HW5SERVER/tests/output/t29.out
lli: tmp.ll:36:12: error: expected value token
store i32  , i8* %vy
           ^
